# drawy

./: .clang-tidy  .editorconfig  .envrc  .flatpak-manifest.yaml  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  REUSE.toml  config-drawy.h.in  flake.nix  package.nix
src/: CMakeLists.txt  Messages.sh  drawycommandlineparser.cpp  drawycommandlineparser.h  main.cpp
src/apps/: CMakeLists.txt  main.cpp
src/canvas/: canvas.cpp  canvas.hpp
src/command/: command.hpp  commandhistory.cpp  commandhistory.hpp  deselectcommand.cpp  deselectcommand.hpp  groupcommand.cpp  groupcommand.hpp  insertitemcommand.cpp  insertitemcommand.hpp  itemcommand.cpp  itemcommand.hpp  moveitemcommand.cpp  moveitemcommand.hpp  removeitemcommand.cpp  removeitemcommand.hpp  selectcommand.cpp  selectcommand.hpp  ungroupcommand.cpp  ungroupcommand.hpp  updatepropertycommand.cpp  updatepropertycommand.hpp
src/common/: constants.hpp  renderitems.cpp  renderitems.hpp
src/common/utils/: compression.cpp  compression.hpp  math.hpp
src/components/: actionbar.cpp  actionbar.hpp  propertybar.cpp  propertybar.hpp  toolbar.cpp  toolbar.hpp
src/context/: applicationcontext.cpp  applicationcontext.hpp  coordinatetransformer.cpp  coordinatetransformer.hpp  renderingcontext.cpp  renderingcontext.hpp  selectioncontext.cpp  selectioncontext.hpp  spatialcontext.cpp  spatialcontext.hpp  uicontext.cpp  uicontext.hpp
src/controller/: controller.cpp  controller.hpp
src/data/: CMakeLists.txt  org.kde.drawy.desktop  org.kde.drawy.metainfo.xml
src/data-structures/: cachegrid.cpp  cachegrid.hpp  orderedlist.cpp  orderedlist.hpp  quadtree.cpp  quadtree.hpp  quadtree.ipp
src/event/: event.cpp  event.hpp
src/iconmanager/: iconmanager.cpp  iconmanager.hpp
src/icons/: CMakeLists.txt
src/item/: arrow.cpp  arrow.hpp  ellipse.cpp  ellipse.hpp  freeform.cpp  freeform.hpp  group.cpp  group.hpp  item.cpp  item.hpp  line.cpp  line.hpp  polygon.cpp  polygon.hpp  rectangle.cpp  rectangle.hpp  text.cpp  text.hpp
src/item/factory/: arrowfactory.cpp  arrowfactory.hpp  ellipsefactory.cpp  ellipsefactory.hpp  freeformfactory.cpp  freeformfactory.hpp  itemfactory.cpp  itemfactory.hpp  linefactory.cpp  linefactory.hpp  rectanglefactory.cpp  rectanglefactory.hpp  textfactory.cpp  textfactory.hpp
src/keybindings/: action.cpp  action.hpp  actionmanager.cpp  actionmanager.hpp  keybindmanager.cpp  keybindmanager.hpp
src/properties/: property.cpp  property.hpp
src/properties/widgets/: actionswidget.cpp  actionswidget.hpp  erasersizewidget.cpp  erasersizewidget.hpp  fontsizewidget.cpp  fontsizewidget.hpp  propertymanager.cpp  propertymanager.hpp  propertywidget.cpp  propertywidget.hpp  strokecolorwidget.cpp  strokecolorwidget.hpp  strokewidthwidget.cpp  strokewidthwidget.hpp
src/resources/: drawy.qrc
src/resources/fonts/: FuzzyBubbles.ttf.license
src/serializer/: loader.cpp  loader.hpp  serializer.cpp  serializer.hpp
src/tools/: arrowtool.cpp  arrowtool.hpp  drawingtool.cpp  drawingtool.hpp  ellipsetool.cpp  ellipsetool.hpp  erasertool.cpp  erasertool.hpp  freeformtool.cpp  freeformtool.hpp  linetool.cpp  linetool.hpp  movetool.cpp  movetool.hpp  polygondrawingtool.cpp  polygondrawingtool.hpp  rectangletool.cpp  rectangletool.hpp  texttool.cpp  texttool.hpp  tool.cpp  tool.hpp
src/tools/selectiontool/: selectiontool.cpp  selectiontool.hpp  selectiontoolmovestate.cpp  selectiontoolmovestate.hpp  selectiontoolselectstate.cpp  selectiontoolselectstate.hpp  selectiontoolstate.hpp
src/widgets/: CMakeLists.txt  drawycommandlineparser.cpp  drawycommandlineparser.h  libdrawywidgets_private_export.h
src/widgets/autotests/: CMakeLists.txt  alignmentwidgettest.cpp  alignmentwidgettest.hpp  arrowitemtest.cpp  arrowitemtest.hpp  arrowstylewidgettest.cpp  arrowstylewidgettest.hpp  arrowtooltest.cpp  arrowtooltest.hpp  arrowutilstest.cpp  arrowutilstest.hpp  autosavejobutiltest.cpp  autosavejobutiltest.hpp  buttonactionswidgettest.cpp  buttonactionswidgettest.hpp  configuregeneralwidgettest.cpp  configuregeneralwidgettest.hpp  diamonditemtest.cpp  diamonditemtest.hpp  diamondtooltest.cpp  diamondtooltest.hpp  drawy_autotest_helper.cpp  drawy_autotest_helper.hpp  drawycommandlineparsertest.cpp  drawycommandlineparsertest.h  ellipseitemtest.cpp  ellipseitemtest.hpp  ellipsetooltest.cpp  ellipsetooltest.hpp  freeformitemtest.cpp  freeformitemtest.hpp  groupitemtest.cpp  groupitemtest.hpp  iconmanagertest.cpp  iconmanagertest.h  itemtest.cpp  itemtest.hpp  itemutilstest.cpp  itemutilstest.hpp  lineitemtest.cpp  (+25 more)
src/widgets/canvas/: canvas.cpp  canvas.hpp
src/widgets/command/: alignitemcommand.cpp  alignitemcommand.h  alignitemcommand.hpp  command.hpp  commandhistory.cpp  commandhistory.hpp  deselectcommand.cpp  deselectcommand.hpp  groupcommand.cpp  groupcommand.hpp  insertitemcommand.cpp  insertitemcommand.hpp  itemcommand.cpp  itemcommand.hpp  moveitemcommand.cpp  moveitemcommand.hpp  removeitemcommand.cpp  removeitemcommand.hpp  selectcommand.cpp  selectcommand.hpp  ungroupcommand.cpp  ungroupcommand.hpp  updatepropertycommand.cpp  updatepropertycommand.hpp
src/widgets/common/: constants.hpp  renderitems.cpp  renderitems.hpp
src/widgets/components/: actionbar.cpp  actionbar.hpp  propertybar.cpp  propertybar.hpp  toolbar.cpp  toolbar.hpp
src/widgets/context/: applicationcontext.cpp  applicationcontext.hpp  coordinatetransformer.cpp  coordinatetransformer.hpp  renderingcontext.cpp  renderingcontext.hpp  selectioncontext.cpp  selectioncontext.hpp  spatialcontext.cpp  spatialcontext.hpp  uicontext.cpp  uicontext.hpp
src/widgets/controller/: controller.cpp  controller.hpp
src/widgets/data-structures/: cachegrid.cpp  cachegrid.hpp  orderedlist.cpp  orderedlist.hpp  quadtree.cpp  quadtree.hpp  quadtree.ipp
src/widgets/dialog/: configuregeneralwidget.cpp  configuregeneralwidget.hpp  configuresettingsdialog.cpp  configuresettingsdialog.hpp
src/widgets/event/: event.cpp  (+1 more)
src/window/: boardlayout.cpp  boardlayout.hpp  window.cpp  window.hpp
(+238 files in other folders)
